<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WeatherStation</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="WIND_SPEED">WIND SPEED</string>
    <string name="DONE">DONE</string>
    <string name="HUMIDITY">HUMIDITY</string>
    <string name="SELECT_DATE">SELECT DATE</string>
    <string name="MAX">MAX</string>
    <string name="MIN">MIN</string>
    <string name="Measurement_Unit">Measurement Unit</string>
    <string name="Hide_Unavailable_Sensor">Hide Unavailable Sensor</string>
    <string name="Automatically_hide_unpaired_disconnected_sensor_s_">Automatically hide unpaired/disconnected sensor(s). </string>
    <string name="celsius_degree">°C</string>
    <string name="fahrenheit_degree">°F</string>
    <string name="pressure">hPa</string>
    <string name="HOME">HOME</string>
    <string name="MAIN">MAIN</string>
    <string name="main_unit_t_h">Main unit T/H</string>
    <string name="Channel">Channel</string>
    <string name="partly_cloudy">PARTLY CLOUDY</string>
    <string name="CLOUDY">CLOUDY</string>
    <string name="night_rain">NIGHT RAIN</string>
    <string name="RAINY">RAINY</string>
    <string name="SNOWY">SNOWY</string>
    <string name="HISTORY">HISTORY</string>
    <string name="TEMPERATURE">TEMPERATURE</string>
    <string name="BAROMETRIC">BAROMETRIC</string>
    <string name="RAINFALL">RAINFALL</string>
    <string name="wind_speed">WIND SPEED</string>
    <string name="PRESSURE">PRESSURE</string>
    <string name="hpa">hpa</string>
    <string name="inHg">inHg</string>
    <string name="mmHg">mmHg</string>
    <string name="mm_h">mm/h</string>
    <string name="inch_h">inch/h</string>
    <string name="kph">kph</string>
    <string name="mph">mph</string>
    <string name="m_s">m/s</string>
    <string name="knots">knots</string>
    <string name="SETTINGS">SETTINGS</string>
    <string name="Station">Station</string>
    <string name="remove_station">Remove station</string>
    <string name="Done">Done</string>
    <string name="automatically_hide_unpaired_disconnected_sensors">Automatically hide unpaired/disconnected sensor(s)</string>
    <string name="hide_unavailable_sensor">Hide Unavailable Sensor</string>
    <string name="select_date">SELECT DATE</string>
    <string name="STATION">STATION</string>
    <string name="name">NAME :</string>
    <string name="RENAME">RENAME</string>

    <string-array name="temperature_units">
        <item>@string/celsius_degree</item>
        <item>@string/fahrenheit_degree</item>
    </string-array>
    <string-array name="pressure_units">
        <item>@string/hpa</item>
        <item>@string/inHg</item>
        <item>@string/mmHg</item>
    </string-array>
    <string-array name="rainfall_units">
        <item>@string/mm_h</item>
        <item>@string/inch_h</item>
    </string-array>
    <string-array name="windspeed_units">
        <item>@string/kph</item>
        <item>@string/mph</item>
        <item>@string/m_s</item>
        <item>@string/knots</item>
    </string-array>

    <string name="refresh">REFRESH</string>
    <string name="persent">%</string>
    <string name="UV">UV</string>
    <string name="EDIT">EDIT</string>
    <string name="SHOW_ALL_DATE">SHOW ALL DATE</string>
	<string name="station_name_extra">station_name_extra</string>
	<string name="station_name_icon">station_name_icon</string>
	<string name="prefKey">prefKey</string>
	
	
	<string name="pref_temperature_units">pref_temperature_units</string>
    <string name="pref_pressure_units">pref_pressure_units</string>
    <string name="pref_rainfall_units">pref_rainfall_units</string>
    <string name="pref_windspeed_units">pref_windspeed_units</string>
    <string name="na">N/A</string>
    <string name="date_format">EEE. d MMM yyyy</string>
    <string name="default_user_name">User\'s Home</string>
    
</resources>