<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/home_panel_date_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:shadowColor="@color/black"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="3"
                android:text="@string/na"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/user_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/na"
                android:textColor="@color/white" />

        </LinearLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/history_item_bg"
            android:columnCount="2"
            android:rowCount="2" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center" >

                <ImageView
                    android:id="@+id/grabber_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/temp_icon_blue" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/TEMPERATURE"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/dark_blue" />

            </LinearLayout>

            <GridLayout
                android:layout_column="1"
                android:layout_gravity="center|right"
                android:layout_row="1"
                android:columnCount="3"
                android:rowCount="2" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_horizontal" >

                    <TextView
                        android:id="@+id/TextView03"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/MAX"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/red" />

                    <TextView
                        android:id="@+id/TextView01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=":"
                        android:textColor="@color/red" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_gravity="left|bottom"
                    android:layout_row="1" >

                    <TextView
                        android:id="@+id/TextView02"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/MIN"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/light_blue" />

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=":"
                        android:textColor="@color/dark_blue" />
                </LinearLayout>

                <TextView
                    android:id="@+id/min_temperature_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/na"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/dark_blue" />

                <TextView
                    android:id="@+id/max_temperature_tv"
                    android:layout_column="1"
                    android:layout_gravity="left|top"
                    android:layout_row="0"
                    android:text="@string/na"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/dark_blue" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_column="2"
                    android:layout_gravity="center"
                    android:layout_row="0"
                    android:text="@string/celsius_degree"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/dark_blue" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_column="2"
                    android:layout_gravity="center"
                    android:layout_row="1"
                    android:text="@string/celsius_degree"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/dark_blue" />

            </GridLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="left|top"
                android:layout_row="1"
                android:orientation="vertical" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="center|left"
                android:layout_row="1" >

                <TextView
                    android:id="@+id/temperature_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/na"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/dark_blue"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/unit_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/celsius_degree"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/dark_blue"
                    android:textSize="12sp" />
            </LinearLayout>
            
        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/history_grah_bar"
            android:orientation="vertical" >

            <include
                android:id="@+id/graph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                layout="@layout/graphs" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
